k8s/marginalia/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marginalia-app
  namespace: marginalia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marginalia-app
  template:
    metadata:
      labels:
        app: marginalia-app
        app.kubernetes.io/name: marginalia-app
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: marginalia
    spec:
      containers:
        - name: app
          image: ghcr.io/mikaelsiidorow/marginalia/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
