k8s/marginalia/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marginalia-app
  namespace: marginalia
spec:
  selector:
    app: marginalia-app
  ports:
    - port: 80
      targetPort: 3000
