k8s/marginalia/zero-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marginalia-zero
  namespace: marginalia
spec:
  selector:
    app: marginalia-zero
  ports:
    - port: 4848
      targetPort: 4848
