k8s/marginalia/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marginalia-app
  namespace: marginalia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - marginalia.miksu.app
      secretName: marginalia-app-tls
  rules:
    - host: marginalia.miksu.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marginalia-app
                port:
                  number: 80
